--- a/Exercicios/Exercício Módulo 32 - Agenda de celular/agenda-de-celular/package.json
+++ b/Exercicios/Exercício Módulo 32 - Agenda de celular/agenda-de-celular/package.json
@@ -13,6 +13,8 @@
     "@types/react-router-dom": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook": "^0.0.1",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
